--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "api/**/*": {
-        "includeFiles": ["dev.db"]
+        "includeFiles": "dev.db"
       }
     }
   }
