--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/node": "^3.2.25",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18"
